# WP10-Cluster5-nace-revision

./: .gitignore  .nojekyll  LICENSE  README.md  _quarto.yaml  index.html  index.qmd  pyproject.toml  search.json
.github/workflows/: publish.yaml
index_files/libs/bootstrap/: bootstrap-b54fd9c50e8f4c46be2cbbb88259b595.min.css
site_libs/bootstrap/: bootstrap-650e1c4f387f528294a918995fd66efb.min.css
