[project]
name = "wp10-cluster5-nace-revision"
version = "0.1.0"
description = "RAG tutorial for recoding free-text activity labels into NACE 2.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.0",
    "ipywidgets>=8.1.8",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.9",
    "more-itertools>=11.0.2",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "papermill>=2.7.0",
    "plotnine>=0.14.0",
    "protobuf>=3.20,<4",
    "pyarrow>=23.0.1",
    "qdrant-client>=1.17.0",
    "quarto>=0.1.0",
    "s3fs>=2026.2.0",
    "tqdm>=4.66.0",
]
